tests/analyzer/fail/enum-backing-duplicate-item.api
// expected: 1003

type f1 = enum { a, b, a };
